legacy_versioned_docs/version-0.8/sdk-reference/context-and-task.mdx
---
sidebar_position: 2
tags:
    - LOC
    - Agent
    - Context
    - JavaScript
    - TypeScript
---

# Context and Task

Data **Context** is an object injected into logic functions at runtime, which containes some key components:

-   [Task](#task) and execution-related information
-   Trigger [payload](/legacy/0.8/sdk-reference/payload)

import Tabs from "@theme/Tabs";
import TabItem from "@theme/TabItem";

#### Availability

-   ✓ Generic logic
-   ✓ Aggregator logic

## Context

> Type:
>
> -   `GenericContext` (generic logic)
> -   `AggregatorContext` (aggregator logic)

When a logic gets executed, a data context object `ctx` will be available in both `run` and `handleError` functions:

<Tabs>
  <TabItem value="ctx-js" label="JavaScript" default>

```javascript showLineNumbers
// highlight-next-line
export async function run(ctx) {
    // ctx is the data context
}

// highlight-next-line
export async function handleError(ctx, error) {
    // the same context as well as error
}
```

  </TabItem>
  <TabItem value="ctx-ts" label="TypeScript">

```typescript showLineNumbers
import { GenericContext, RailwayError } from "@fstnetwork/loc-logic-sdk";

// highlight-next-line
export async function run(ctx: GenericContext) {
    // ctx is the data context
}

// highlight-next-line
export async function handleError(ctx: GenericContext, error: RailwayError) {
    // the same context as well as error
}
```

  </TabItem>
</Tabs>

## Task

```typescript
export async function run(ctx) {
    // highlight-next-line
    const task = ctx.task;
}
```

A task is an execution of this particular data process invoked by a trigger.

| Member           | Type                                                      | Description                            |
| ---------------- | --------------------------------------------------------- | -------------------------------------- |
| `taskId`         | `taskId`, which is `{ id: string, executionId: string }`  | Task ID and execution ID               |
| `startAt`        | `Date`                                                    | Task start date                        |
| `dataProcess`    | [`VersionedIdentityContext`](#versioned-identity-context) | Data process permanent ID              |
| `currentLogic`   | `VersionedIdentityContext`                                | Current logic permanent ID             |
| `executedLogics` | `Array<VersionedIdentityContext>`                         | An array of identity of executed logic |

### Versioned Identity Context

Represents the identity of a logic or a data process:

| Member              | Type     | Description                     |
| ------------------- | -------- | ------------------------------- |
| `name`              | `string` | Name                            |
| `permanentIdentity` | `string` | Permanent identity string (PID) |
| `revision`          | `number` | Revision number                 |

#### Example

```typescript showLineNumbers
const taskId = ctx.task.taskId.id;
const executionId = ctx.task.taskId.executionId;
const pid = ctx.task.dataProcess.permanentIdentity;
```
